--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<h1>
-  {{title}}
-</h1>
+<div class="page">
+  <div class="page-content">
+    <div class="panel">
+      <div class="panel-body">
+        <users></users>
+      </div>
+    </div>
+  </div>
+</div>
