--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <div class="panel">
       <div class="panel-body">
         <users></users>
+        <users></users>
       </div>
     </div>
   </div>
